--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,6 +8,7 @@
   --rbp-text: #3f3f46;
   --rbp-text-header: #18181b;
   --rbp-link: #d157f9;
+  --rbp-marker: #a1a1aa;
 }
 
 html.dark {
@@ -16,6 +17,7 @@ html.dark {
   --rbp-border: rgb(24, 24, 27);
   --rbp-text: #e4e4e7;
   --rbp-text-header: #fafafa;
+  --rbp-marker: #c2c2c2;
 }
 
 html {
@@ -24,7 +26,7 @@ html {
   font-family: Inter, sans-serif;
 }
 
-:not(h1,h2,h3,h4) {
+:not(h1, h2, h3, h4) {
   > a {
     &:hover {
       border-color: var(--rbp-link);
