--- a/src/assets/styles/wowhead.scss
+++ b/src/assets/styles/wowhead.scss
@@ -1,10 +1,28 @@
 .wowhead-tooltip {
-  background-color: rbga(var(--rbp-surface), 90);
-  backdrop-filter: blur(2px);
+  @apply flex flex-shrink text-sm bg-opacity-80 rounded-md shadow-lg text-white;
+  background-color: rgba(12, 12, 13, 0.8);
+  backdrop-filter: blur(4px);
   padding: 0.5rem 1rem;
-  border-radius: 0.375rem;
+  min-width: auto;
 }
 
 .whtt-tooltip-icon {
+  position: absolute;
+  height: 44px;
+  width: 44px;
+  top: 0.05rem;
+  left: calc(-44px - 0.25rem);
 
+  .iconmedium {
+    height: 44px;
+    width: 44px;
+  }
+
+  ins {
+    @apply rounded-md;
+    display: block;
+    border: 2px solid #000;
+    height: 44px;
+    width: 44px;
+  }
 }
